tests/e2e/type_cast_as_invalid.story
a = [] as Map[string,string]
